use-case-demos/workload-security-rings/policy/test/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    security-ring: sensitive
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
      security-ring: sensitive
  template:
    metadata:
      labels:
        app: nginx
        security-ring: sensitive
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
        - containerPort: 80
