use-case-demos/workload-security-rings/policy/test/pod-with-wrong-security-ring-selector.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    env: test
    security-ring: sensitive
spec:
  containers:
  - name: nginx
    image: nginx
    imagePullPolicy: IfNotPresent
  nodeSelector:
    key: value
    security-ring: unhardened
